src/test/ui/consts/const-extern-fn/const-extern-fn-requires-unsafe.mir.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/const-extern-fn-requires-unsafe.rs:9:17
   |
LL |     let a: [u8; foo()];
   |                 ^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> $DIR/const-extern-fn-requires-unsafe.rs:11:5
   |
LL |     foo();
   |     ^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0133`.
